# latex-docker-template

./: .actrc  .gitignore  .latexmkrc  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/scripts/: CLAUDE.md
.github/workflows/: build.yml
docs/: 01-getting-started.md  02-project-structure.md  03-latex-packages.md  04-building.md  05-testing.md  06-customization.md  CLAUDE.md
scripts/: .gitkeep  CLAUDE.md  build.py  clean.py  init.py  lint.py  setup.py  test.py  watch.py
src/: CLAUDE.md  main.tex
src/assets/: CLAUDE.md
src/assets/figures/: .gitkeep  CLAUDE.md
src/assets/images/: .gitkeep  CLAUDE.md
src/bibliography/: .gitkeep  CLAUDE.md  references.bib
src/chapters/: .gitkeep  00-introduction.tex  CLAUDE.md
src/preamble/: .gitkeep  CLAUDE.md  commands.tex  packages.tex  settings.tex
styles/: .gitkeep  CLAUDE.md  template.sty
tests/: CLAUDE.md  references.bib  test_document.tex
tests/fixtures/: .gitkeep
